tdf#89337: Fixing crash in edit/index dialog, again

the fix of tdf#92732 moved the crash from pressing Close/OK to
pressing the window closer. Now the CareWindow is set in dispose
and this works for all

Change-Id: Id9c272acec48890556a5042c0f5310e69c0a67da